@@ -118,7 +118,7 @@ int libfdatetime_fat_date_time_copy_from_byte_stream(
      libfdatetime_fat_date_time_t *fat_date_time,
      const uint8_t *byte_stream,
      size_t byte_stream_size,
-     uint8_t byte_order,
+     int byte_order,
      libfdatetime_error_t **error );
 
 /* Converts a 32-bit value into a FAT date and time
@@ -253,7 +253,7 @@ int libfdatetime_filetime_copy_from_byte_stream(
      libfdatetime_filetime_t *filetime,
      const uint8_t *byte_stream,
      size_t byte_stream_size,
-     uint8_t byte_order,
+     int byte_order,
      libfdatetime_error_t **error );
 
 /* Converts a 64-bit value into a filetime
@@ -385,7 +385,7 @@ int libfdatetime_nsf_timedate_copy_from_byte_stream(
      libfdatetime_nsf_timedate_t *nsf_timedate,
      const uint8_t *byte_stream,
      size_t byte_stream_size,
-     uint8_t byte_order,
+     int byte_order,
      libfdatetime_error_t **error );
 
 /* Converts a 64-bit value into a NSF timedate
@@ -511,7 +511,7 @@ int libfdatetime_posix_time_copy_from_byte_stream(
      libfdatetime_posix_time_t *posix_time,
      const uint8_t *byte_stream,
      size_t byte_stream_size,
-     uint8_t byte_order,
+     int byte_order,
      uint8_t value_type,
      libfdatetime_error_t **error );
 
