@@ -1,4 +1,4 @@
-.Dd April 17, 2012
+.Dd April 22, 2012
 .Dt libfdatetime 3
 .Os libfdatetime
 .Sh NAME
@@ -31,7 +31,7 @@ FAT date and time functions
 .Ft int
 .Fn libfdatetime_fat_date_time_free "libfdatetime_fat_date_time_t **fat_date_time, libfdatetime_error_t **error"
 .Ft int
-.Fn libfdatetime_fat_date_time_copy_from_byte_stream "libfdatetime_fat_date_time_t *fat_date_time, uint8_t *byte_stream, size_t byte_stream_size, uint8_t byte_order, libfdatetime_error_t **error"
+.Fn libfdatetime_fat_date_time_copy_from_byte_stream "libfdatetime_fat_date_time_t *fat_date_time, uint8_t *byte_stream, size_t byte_stream_size, int byte_order, libfdatetime_error_t **error"
 .Ft int
 .Fn libfdatetime_fat_date_time_copy_from_uint32 "libfdatetime_fat_date_time_t *fat_date_time, uint32_t value_32bit, libfdatetime_error_t **error"
 .Ft int
@@ -57,7 +57,7 @@ Filetime functions
 .Ft int
 .Fn libfdatetime_filetime_add "libfdatetime_filetime_t *filetime, libfdatetime_filetime_t *additional_filetime, libfdatetime_error_t **error"
 .Ft int
-.Fn libfdatetime_filetime_copy_from_byte_stream "libfdatetime_filetime_t *filetime, uint8_t *byte_stream, size_t byte_stream_size, uint8_t byte_order, libfdatetime_error_t **error"
+.Fn libfdatetime_filetime_copy_from_byte_stream "libfdatetime_filetime_t *filetime, uint8_t *byte_stream, size_t byte_stream_size, int byte_order, libfdatetime_error_t **error"
 .Ft int
 .Fn libfdatetime_filetime_copy_from_64bit "libfdatetime_filetime_t *filetime, uint64_t value_64bit, libfdatetime_error_t **error"
 .Ft int
@@ -81,7 +81,7 @@ NSF timedate functions
 .Ft int
 .Fn libfdatetime_nsf_timedate_free "libfdatetime_nsf_timedate_t **nsf_timedate, libfdatetime_error_t **error"
 .Ft int
-.Fn libfdatetime_nsf_timedate_copy_from_byte_stream "libfdatetime_nsf_timedate_t *nsf_timedate, const uint8_t *byte_stream, size_t byte_stream_size, uint8_t byte_order, libfdatetime_error_t **error"
+.Fn libfdatetime_nsf_timedate_copy_from_byte_stream "libfdatetime_nsf_timedate_t *nsf_timedate, const uint8_t *byte_stream, size_t byte_stream_size, int byte_order, libfdatetime_error_t **error"
 .Ft int
 .Fn libfdatetime_nsf_timedate_copy_from_64bit "libfdatetime_nsf_timedate_t *nsf_timedate, uint64_t value_64bit, libfdatetime_error_t **error"
 .Ft int
@@ -105,7 +105,7 @@ POSIX time functions
 .Ft int
 .Fn libfdatetime_posix_time_free "libfdatetime_posix_time_t **posix_time, libfdatetime_error_t **error"
 .Ft int
-.Fn libfdatetime_posix_time_copy_from_byte_stream "libfdatetime_posix_time_t *posix_time, uint8_t *byte_stream, size_t byte_stream_size, uint8_t byte_order, uint8_t value_type, libfdatetime_error_t **error"
+.Fn libfdatetime_posix_time_copy_from_byte_stream "libfdatetime_posix_time_t *posix_time, uint8_t *byte_stream, size_t byte_stream_size, int byte_order, uint8_t value_type, libfdatetime_error_t **error"
 .Ft int
 .Fn libfdatetime_posix_time_copy_from_32bit "libfdatetime_posix_time_t *posix_time, uint32_t value_32bit, uint8_t value_type, libfdatetime_error_t **error"
 .Ft int
