@@ -24,6 +24,9 @@ HFS date/time
 Deployment
 * add macosx file
 
+20120422
+* changed byte order to int
+
 20120418
 * fixes for with index functions
 
